--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Backend
 # ???????
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/popquizdb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/popquizdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=ybt050402
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
